--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm not hosted with GitHub Pages.</p>
+<h1>Hello There</h1>
+<p>I'm working on this, stay tuned for more.</p>
 </body>
 </html>
