--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <h2>Griz cam</h2>
 	    <img src="https://secure.skircr.com/cams2/fecam6/final.jpg?_ga=2.238449600.1132708168.1682006218-894134384.1658933677" alt="Griz cam">
     </div>
+
+    <div class="container">
+        <h2>Western satelite loop</h2>
+	    <img src="http://images.intellicast.com/WxImages/SatelliteLoop/hipacsat_None_anim.gif" alt="sat loop">
+    </div>
+    
     
     <div class="container">
         <iframe src="http://mountainweather.ca/data/STUDYPLOT.HTM" width="100%" height="500"></iframe>
