--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     </div>
 
     <div class="container">
-        <h2>Western satelite loop</h2>
-	    <img src="http://images.intellicast.com/WxImages/SatelliteLoop/hipacsat_None_anim.gif" alt="sat loop">
+        <iframe src="https://weather.gc.ca/index_e.html?layers=alert,radar&zoom=11&center=49.50012063,-114.95607947" width="100%" height="500"></iframe>
     </div>
     
     
