--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <html>
 <head>
 	<title>Fernie Snow</title>
-    <style>
-		img {
-			max-width: 80%;
-			height: auto;
-		}
-
-        .container {
-            margin: 20px;
-            padding: 10px;
-        }
-	</style>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
 </head>
 <body>
     <h1>Fernie Snow</h1>
@@ -23,7 +13,7 @@
     </div>
 
     <div class="container">
-        <iframe src="https://weather.gc.ca/index_e.html?layers=alert,radar&zoom=11&center=49.50012063,-114.95607947" width="100%" height="900"></iframe>
+        <iframe src="https://spotwx.com/products/grib_index.php?model=gem_glb_15km&lat=49.49128&lon=-115.07252&tz=America/Edmonton&label=" width="100%" height="900"></iframe>
     </div>
     
 </body>
