--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 <body>
     <h1>Fernie Snow</h1>
     
-    <div class="container">
-        <h2>Griz cam</h2>
-	    <img src="https://secure.skircr.com/cams2/fecam6/final.jpg?_ga=2.238449600.1132708168.1682006218-894134384.1658933677" alt="Griz cam">
-    </div>
+    <nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="snow.html">Snow</a></li>
+		</ul>
+	</nav>
 
     <div class="container">
-        <iframe src="https://spotwx.com/products/grib_index.php?model=gem_glb_15km&lat=49.49128&lon=-115.07252&tz=America/Edmonton&label=" width="100%" height="900"></iframe>
+        <h2>Welcome</h2>
     </div>
     
 </body>
