--- a/snow.html
+++ b/snow.html
@@ -9,8 +9,8 @@
     
     <nav>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Snow</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="snow.html">Snow</a></li>
 		</ul>
 	</nav>
 
