--- a/snow.html
+++ b/snow.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
 </head>
 <body>
-    <h1>Snow</h1>
+    <header>
+        <h1>Snow</h1>
+    </header>
     
     <nav>
 		<ul>
