--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
 </head>
 <body>
-    <h1>Fernie Snow</h1>
+    <header>
+        <h1>Fernie Snow</h1>
+    </header>
+    
     
     <nav>
 		<ul>
