--- a/snow.html
+++ b/snow.html
@@ -20,8 +20,11 @@
         <h2>Griz cam</h2>
 	    <img src="https://secure.skircr.com/cams2/fecam6/final.jpg?_ga=2.238449600.1132708168.1682006218-894134384.1658933677" alt="Griz cam">
     </div>
-    <br>
-    <br>
+    
+    <div class="container">
+        <button onclick="location.href='https://avalanche.ca/en/map';">Avalanche Bulletin</button>
+    </div>
+    
     <div class="container">
         <iframe src="https://spotwx.com/products/grib_index.php?model=gem_glb_15km&lat=49.49128&lon=-115.07252&tz=America/Edmonton&label=" width="100%" height="900"></iframe>
     </div>
