--- a/snow.html
+++ b/snow.html
@@ -13,6 +13,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="snow.html">Snow</a></li>
+            <li><a href="temps.html">Temps</a></li>
 		</ul>
 	</nav>
 
