--- a/temps.html
+++ b/temps.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Temps</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
+    <script id="tali-ai" async src="https://tali.ai/tali.js" client-id="789456123"></script>
 </head>
 <body>
     <header>
