Added new secitons

--- a/temps.html
+++ b/temps.html
@@ -16,16 +16,14 @@
             <li><a href="temps.html">Temps</a></li>
 		</ul>
 	</nav>
-
+    
     <div class="container">
-        <h3>Enter a date:</h3>
-        <input type="date" id="userDate">
-        <button id="button">Submit</button>
-        <br></br>
-        <div class="container2">
-            <div class="box" id="box1">Max Temp. </div>
-            <div class="box" id="box2"></div>
-        </div>
+        <h2>Mountain Weather Study Plot</h2>
+        <iframe src="https://mountainweather.ca/data/STUDYPLOT.HTM"
+                width="100%"
+                height="800"
+                style="border:none;">
+        </iframe>
     </div>
       
   <script src="js/scripts.js"></script>
