--- a/snow.html
+++ b/snow.html
@@ -30,5 +30,23 @@
         <iframe src="https://spotwx.com/products/grib_index.php?model=gem_glb_15km&lat=49.49128&lon=-115.07252&tz=America/Edmonton&label=" width="100%" height="900"></iframe>
     </div>
     
+    <div class="container">
+        <h2>Terrain Status</h2>
+        <iframe src="https://skifernie.com/conditions/snow-report/#eluid4ddfb4ef"
+                width="100%"
+                height="800"
+                style="border:none;">
+        </iframe>
+    </div>
+
+    <div class="container">
+        <h2>Mountain Weather</h2>
+        <iframe src="https://skifernie.com/conditions/alpine-weather/"
+                width="100%"
+                height="800"
+                style="border:none;">
+        </iframe>
+    </div>
+
 </body>
 </html>
